--- a/preamble.tex
+++ b/preamble.tex
@@ -30,7 +30,7 @@
 %Namen des Verfassers der Arbeit
 \author{Paul Jin Robaschik}
 %Geburtsdatum des Verfassers
-\geburtsdatum{25. Juni 2004}
+\geburtsdatum{25.\ Juni 2004}
 %Gebortsort des Verfassers
 \geburtsort{K\"oln}
 %Datum der Abgabe der Arbeit
