--- a/Thesis.tex
+++ b/Thesis.tex
@@ -643,7 +643,7 @@ As homology theories are defined as functors from \(\mathrm{TOP}^2\), we will ex
 \end{example}
 
 \begin{remark}
-    The above example is just the same as the cylinder bordism in example\ \ref{cylinder bordism}, if we had constructed it as a cylinder we would not have had to worry about the embedding. If cylinder bordism works for manifolds with non-empty boundary, we can take its lateral surface (\(=\partial M_0\times [0,1]\)) as \(M'\). For this to work, it has to be shown that \(M\times[0,1]\) admits a smooth structure; a priori it is a manifold with corners. This is done by applying a technique called \demph{straightening the angle}\ \cite[I.3]{conner}. We will not go into detail here, but the main idea is to find an submanifold of codimension 2 containing all corners and a open neighbourhood of it which can be charted into \(\R^{n-2}\times\R_{\geq0}^2\) and then getting new charts by composing with a diffeomorphism \(\R_{\geq0}^2\xrightarrow\cong\R\times\R_{\geq0}\).
+    The above example is just the same as the cylinder bordism in example\ \ref{cylinder bordism}, if we had constructed it as a cylinder we would not have had to worry about the embedding. If cylinder bordism works for manifolds with non-empty boundary, we can take its lateral surface (\(=\partial M_0\times [0,1]\)) as \(M'\). For this to work, it has to be shown that \(M\times[0,1]\) admits a smooth structure; a priori it is a manifold with corners. This is done by applying a technique called \demph{straightening the angle}\ \cite[\nopp I.3]{conner}. We will not go into detail here, but the main idea is to find an submanifold of codimension 2 containing all corners and a open neighbourhood of it which can be charted into \(\R^{n-2}\times\R_{\geq0}^2\) and then getting new charts by composing with a diffeomorphism \(\R_{\geq0}^2\xrightarrow\cong\R\times\R_{\geq0}\).
 \end{remark}
 
 \begin{theorem}[{\cite[p.525]{dieck}}]
